--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
       try {
         // Make POST request to Vercel-hosted API endpoint
-        const response = await fetch('https://allen-extractor.vercel.app/extract', {  // Replace with your Vercel URL
-          method: 'POST',
-          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-          body: new URLSearchParams(formData),  // Convert form data to URL-encoded format
-        });
+        const response = await fetch('https://allen-extractor.onrender.com/extract', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+  body: new URLSearchParams(formData),
+});
 
         // Handle the response
         if (response.ok) {
